add some features of home

--- a/HeadUnit/CMakeLists.txt
+++ b/HeadUnit/CMakeLists.txt
@@ -29,11 +29,15 @@ find_package(Qt5 COMPONENTS Core Quick REQUIRED)
 if(ANDROID)
     add_library(HeadUnit SHARED
       main.cpp
+      basic_func.h
+      basic_func.cpp
       qml.qrc
     )
 else()
     add_executable(HeadUnit
       main.cpp
+      basic_func.h
+      basic_func.cpp
       qml.qrc
     )
 endif()
